--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -27,6 +27,7 @@
 \newcommand{\ki}{\langle k \rangle}
 \newcommand{\kii}{\langle k^2 \rangle}
 \newcommand{\kiii}{\langle k^3 \rangle}
+\newcommand{\sumj}{\sum\limits_j}
 \newcommand{\sumk}{\sum\limits_k}
 \newcommand{\sumjk}{\sum\limits_{jk}}
 \newcommand{\ham}{\mathcal{H}\left(\mathbf{p},\mathbf{r}\right)}
