--- a/text/bilayers.tex
+++ b/text/bilayers.tex
@@ -490,6 +490,7 @@ Interestingly it is also evident why no configurations are present below $p_6\ap
 Below this point, the entropy of the $\br{4}{10}$ system decreases whilst the energy continues to rise and so there is no driving force to sample this area of phase space.
 
 \subsection{Physical Properties}
+\label{s:trphysprop}
 
 As an additional check that the developed triangle raft model behaves physically, 
 the angle distribution between adjacent \sioiii{} units, $f\left(\theta\right)$, was calculated for the $\br{4}{10}$ system across the range of temperatures studied. 
@@ -557,7 +558,7 @@ The degree of distortion can be described by the eccentricity of the ellipse,
 	\xi = \left(1-\frac{b^2}{a^2}\right)^{1/2},
 \end{equation}
 where $a$, $b$ are the major and minor axis radii respectively. 
-This change in area with distortion is shown in figure \ref{fig:trellipse}, the calculation of which can be found in appendix \davidnote{add ellipse appendix}. 
+This change in area with distortion is shown in figure \ref{fig:trellipse}, the calculation of which can be found in appendix \ref{app:derivellipse}. 
 As can be seen, a large degree of eccentricity is needed for a significant change in the observable area. 
 For example, if $a=1.5 b$, the area is still $\approx0.94\%$ of the area of the corresponding circle. 
 
