--- a/text/targeted_opt.tex
+++ b/text/targeted_opt.tex
@@ -120,6 +120,7 @@ The extreme computational efficiency of evaluating the forces of the harmonic po
 The final geometry can then be refined.
 
 \section{Mapping Configurational Space}
+\label{s:toptmapconfigspace}
 
 The targeted optimisation algorithm provides a opportunity to gain insight into the physical meaning of the \aw{} and its effect on network topology.
 For this, a variety of test systems are used, the principle of which contains only $5\rightarrow 7$ membered rings, a proxy for amorphous graphene, aG.
@@ -133,7 +134,7 @@ In addition, this allows the $\alpha$ parameter to be explicitly defined in term
 	\label{eq:agalpha}
 	\alpha = \frac{12\chi_{75}^5-\left(1-p_6\right)^2}{6\left(1-p_6\right)}\,,
 \end{equation}
-where $\chi_{75}^5=e_{57}-e_{55}$ (details the derivation can be found in appendix \davidnote{appendix for derivation of aG $\alpha$}.
+where $\chi_{75}^5=e_{57}-e_{55}$ (details of the derivation can be found in appendix \ref{app:derivag}).
 This makes the aG model the first example of a system where the $\alpha$ parameter is well defined in terms of the underlying ring structure.
 It also highlights the relative complexity in the \aw{} parameter for even a seemingly simple case.
 
