--- a/text/theory.tex
+++ b/text/theory.tex
@@ -24,6 +24,7 @@ All the networks considered in this work are undirected and all the theory assum
 \end{figure}
 
 \subsection{Node Degree and Probability Distributions} 
+\ref{s:theorynodeprob}
 
 A key concept in network science is the the node degree, defined as the number of links that each node possesses.
 A node with $k$ links is then said simply to have degree $k$, where $k\in\mathbb{N}$.
