--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -14,11 +14,11 @@ It is clear that understanding the structure of amorphous materials is key to th
 However, due to the relative recentness of these experimental discoveries, much of the existing theory arises from studies of systems on greater length scales.
 Specifically, in the second half of the 20\th{} century, much work was carried out on the formation of polycrystals in metals and alloys.
 By annealing the metal and slicing through the sample, the grains in the polycrystal could be directly imaged; revealing a system of tessellating polygons not dissimilar to an atomic material \cite{Beck1954,Dunn1957}.
-Over time it became apparent that the structure of these networks is constrained on a series of different levels.
 
+Over time it became apparent that the structure of these networks is constrained on a series of different levels.
 Firstly the mean ring size (\ie{} the average number of sides in a polygon) tends to the constant value of six.
-This is readily explainable via graph theoretic arguments, simply resulting from Euler's formula when each vertex forms part of three edges - as is the case for trivalent atoms or the meeting of three grain boundaries.
-Intuitively from chemistry we know this to be true: a pristine graphene sheet is a hexagonal net and although a Stone\--Wales defect introduces pentagons and heptagons, they occur in pairs to preserve the overall mean ring size \cite{Stone1986}.
+This is readily explainable via graph theoretic arguments, resulting from Euler's formula when each vertex forms part of three edges - as is the case for trivalent atoms or the meeting of three grain boundaries.
+This is consistent with chemical intuition: a pristine graphene sheet is a hexagonal net and although a Stone\--Wales defect introduces pentagons and heptagons, they occur in pairs to preserve the overall mean ring size \cite{Stone1986}.
 
 The next level of information is then the explicit distribution of polygon sizes, also known as the ring statistics.
 With the constraint of a fixed mean, the ring statistics were shown to be relatively well defined, following a lognormal or maximum entropy distribution \cite{Shackelford1981,Lemaitre1993,Lichtenstein2012}.
@@ -45,7 +45,6 @@ Figures \ref{fig:zach_high}\--\ref{fig:zach_low} show three such examples tiling
          \caption{}
          \label{fig:zach_high}
      \end{subfigure}
-     \hspace{1cm}
      
      \begin{subfigure}[b]{0.25\textwidth}
          \centering
@@ -70,7 +69,7 @@ Furthermore, given the large number of configurations which may be theoretically
 Empirically, these are found to be the ones in which large rings tend to be surrounded by smaller rings \ie{} similar to \ref{fig:zach_high}.
 Once again, chemical intuition would support this in the context of atomic materials, as strain is minimised by maintaining bond lengths and angles as close to their equilibrium values as possible.
 This effect was first noticed in polycrystals and quantified through the \aw{} law \cite{Aboav1970,Weaire1974}.
-This law claims that the mean ring size about any given ring can be related to the central ring size by a single fitting parameter.
+This law posits that the mean ring size about any given ring can be related to the central ring size by a single fitting parameter.
 Hence the value of this parameter in some way describes the increased tendency of the small rings to be adjacent to large rings.
 The \aw{} parameter therefore provides information on the first\--order ring correlations, completing the topological description of the network material.
 
@@ -80,37 +79,83 @@ In order to perform these simulations, it is necessary to have a starting atomis
 This can be achieved in multiple ways. 
 The most straightforward is to take one of the existing experimental images. 
 These are however limited in size and number and can contain defects or areas which cannot be fully imaged.
+In addition, some related experimental systems have proved significantly more challenging to synthesise, such as bilayers of germania \cite{Lewandowski2018,Lewandowski2019}.
 As a result, computational techniques are often preferable, but generating configurations will the required topological properties (\ie{} correct ring statistics \textit{and} \aw{} parameter) has proved surprisingly difficult \cite{Roy2018,Kumar2014}.
 Therefore, the first part of this thesis will focus on developing methods to generate configurations of \td{} networks in which the topological parameters can be tuned in a controllable manner.
-These configurations can then be used as a seed for further computational studies, removing the reliance for experimental configurations and opening the door for high\--throughput calculations which can be speculative and potentially predictive.
+These configurations can then be used as a seed for further computational studies, removing some of the reliance on experimental configurations and opening the door for high\--throughput calculations which can be speculative and potentially predictive.
 
 However, the scope of this work extends beyond materials modelling.
 As previously mentioned, much of the original work in this field focussed on polycrystals of metal oxides with some links to foams and Voronoi polygons \cite{Aboav1980,Boots1984}.
-It is now clear that these chemical networks fit into a much wider class of \td{} physical networks that are ubiquitous in the natural world, emerging across all physical disciplines and length scales.
+It is now clear that these chemical networks fit into a much wider class of \td{} physical networks that are ubiquitous in the natural world, emerging across physical disciplines and length scales.
 Traditional examples range from the atomic level of ultra\--thin materials, through colloids, foams, epithelial cells and all the way to geological rock formations \cite{Earnshaw1994,Allain1995,Moncho-Jorda2000,Durand2011,Tong2017,Goehring2014}.
 There are however countless more occurrences, with drying blood, stratocumulus clouds, crocodile scales and geopolitical borders all being the subject of studies \cite{Brutin2011,Glassmeier2017,Milinkovitch2019,LeCaer1993}.
-More intriguingly, although these systems are incredibly physically diverse, they still have similar structures \cite{Schliecker1999}. 
+More intriguingly, although these systems are incredibly physically diverse, they have strikingly similar structures \cite{Schliecker1999}. 
 This is because they can all be mapped onto the same generic system, which can be equivalently described as a collection of tessellating polygons or percolating rings, and hence they are governed by the same fundamental laws. 
 Understanding the behaviours of \td{} networks is therefore key to a wide range of problems in frontier research, not only the directed synthesis of nano\--materials but also for example the control of mitotic division \cite{Gibson2011,Ladan2019}; as well as to curiosities such as explaining the arrangement of the stones in Giant's Causeway or cracking in famous artworks \cite{Weaire1984,Flores2017}.
 
-Furthermore, the continuing expansion and maturity of network science as a field has led to significant advances in the description and characterisation of complex networks.
+Coupled with these observations, the continuing expansion and maturity of network science as a field has led to significant advances in the description and characterisation of complex networks.
 This has largely been driven by interest in networks in the more abstract sense of the internet, social media and neural networks \cite{Strogatz2001,Boccaletti2006,Barabasi2012}.
 To date, the application of these principles in the physical sciences has mostly been confined to topics such as biological signalling pathways.
-The second half of this thesis will therefore show how robust metrics from network science can be applied to physical \td{} networks to better quantify their structure and replace the need for empirical measures such as the \aw{} law.
-This also has the effect of tying physical \td{} networks into the wider field of network science, showing them to be a unique and interesting addition to the area.
+The second part of this thesis will therefore show how robust metrics from network science can be applied to physical \td{} networks to better quantify their structure and replace the need for empirical measures such as the \aw{} law.
+As part of this process, more generic methods are developed to construct \td{} networks across a range of potential models, coordination environments and topologies.
+This allows a systematic study into the factors which influence the underlying network properties in \td{} systems.
+More broadly, this has the effect of tying physical \td{} networks into the wider field of network science, showing them to be a unique and interesting addition to the area.
 
-As part of this process, more generic methods will be developed to construct \td{} networks across a range of potential models, coordination environments and topologies.
-This will allow a systematic study into the factors which influence the underlying network properties in \td{} systems.
-These will be compared to two further in\--depth studies of network forming structures from the physical sciences.
-\davidnote{Expand colloid/procrystals bit.}
-The first are Voronoi tessellations formed in colloidal monolayers.
-which can be simulated via hard particle models \cite{Thorneywork2017}.
-The second are the ring structures in so\--called ``procrystalline'' lattices \cite{Overy2016}.
-\davidnote{Paragraph to wrap up}
-\marknote{PH here?}
-\davidnote{Yep PH here}
+The later parts of this thesis will apply the developed concepts and techniques to a series of related and novel problems across chemistry.
+To given a broad overview, this will begin with an investigation into the network analysis of quasi\--two\--dimensional hard sphere systems, which is of direct relevance to on\--going experimental studies of colloidal monolayers \cite{Thorneywork2017}.
+In such systems, the ring structure emerges through construction of a Voronoi diagram, which partitions the sample space into polygonal regions associated with each particle.
+Whilst the properties of Voronoi diagrams are well understood for two\-- and three\--dimensional systems, the intermediate dimensionality of colloidal monolayers leads to novel challenges in their characterisation.
+Following this, attention will be turned to another system of relatively recent interest, that of ``procrystalline'' lattices \cite{Overy2016}.
+These procrystals can also be considered to have intermediary behaviour, in that they have atoms located on a regular, ordered lattice and yet have disordered ring structure - hence lying between the crystalline and amorphous states.
+This partial ordering raises the possibility of procrystals displaying fundamentally different behaviour, in terms of their network properties, to either crystalline or amorphous materials.
+Finally, a new tool from topological data analysis, termed persistent homology, will be applied to \td{} amorphous materials.
+The aim of persistent homology is to find the fundamental topological features in generic point sets, and so holds the potential to identify and characterise the ring structure in atomic networks \cite{Wasserman2018}.
+Although the method is in its relative infancy, the effectiveness of persistent homology in quantifying disorder in the case of \td{} materials can be examined ahead of time through the use of computational models.
+\davidnote{Is this paragraph all too brief or about right?}
 
+These interrelated examples raise two important questions central to this work, namely why is the focus on \td{} systems, and why on computational modelling?
+To answer the first of these questions, one may argue it is precisely because there exist experimental realisations of quasi\--two\--dimensional systems, which have a range of technologically useful applications \cite{Butler2013,Bhimanapati2015,Tan2017}.
+Alternatively, it may be said that a \td{} system is in some way a simplified version of a \thd{} assembly, and so they provide a tractable way of studying the behaviours of higher dimensionality systems.
+Whilst both these statements have merit, neither is entirely satisfactory, as the former neglects to explain why such experiments are successful and latter is not universally true \cite{ChaikinPaulM1995}.
+Two\--dimensional systems can display their own unique constraints, which in fact often leads to the desirable properties of nanomaterials.
+What study in two dimensions provides, is the opportunity to visualise, analyse and understand systems which are inherently more tangible.
+Raw data is available experimentally in real\--space, without the need for transformation, as required with structure factors or diffraction patterns.
+From this data, metrics such as the ring structure is well defined and readily extractable.
+This in turn allows the development of simulation and analysis methods which are able to accurately model and characterise the system, and leads to a more complete understanding.
+It is then the ideal that the insight gained can be applied to higher dimensions, or used to aid the synthesis of materials with analogous properties.
+\davidnote{Is this paragraph pointless waffle?}
+
+In response to the second question, the power of computational modelling as complement to experiment arises from the ability to reproduce experimental results, but also explore experimentally inaccessible systems.
+As previously mentioned, experimental data, such as STM, from frontier research is difficult to produce and may be incomplete or relatively small in extent.
+Computational models can help to fill any gaps and provide information as to the frequency or stability of the observed sample.
+Moreover, computation has access to a greater number of observables than experiment, which can provide explanation for a given phenomenon.
+Finally, and perhaps most importantly, simulation allows a holistic study of materials by continuously varying parameters to generate structures which may or may not map onto those from experiment.
+This enables properties to systematically explored, in principle leading to the holy grail of computational modelling, that of predictive capability.
+This thesis aims to incorporate all of these aspects, designing models and algorithms to simulate a wide range of \td{} systems, developing metrics to better characterise them and compare to experiment, and ultimately pushing these models outside the current experimental bounds.  
+\davidnote{As above?}
 
 \section{Thesis Structure}
 
+The structure of this thesis is as follows:
+\davidnote{Todo: thesis structure}
+\begin{itemize}
+	\item \bf{Chapter 2}:
+	
+	\item \bf{Chapter 3}:
+	
+	\item \bf{Chapter 4}:
+	
+	\item \bf{Chapter 5}:
+	
+	\item \bf{Chapter 6}:
+	
+	\item \bf{Chapter 7}:
+	
+	\item \bf{Chapter 8}:
+
+	\item \bf{Chapter 9}:
+	
+	\item \bf{Chapter 10}:
+\end{itemize}
+	
  
