--- a/thesis.tex
+++ b/thesis.tex
@@ -204,7 +204,7 @@
 % Add or remove any chapters you'd like here, by file name (excluding '.tex'):
 \flushbottom
 %\include{text/introduction}
-%\include{text/theory}
+\include{text/theory}
 %\include{text/methods}
 %\include{text/bilayers}
 %\include{text/targeted_opt}
